--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -114,8 +114,8 @@ $gradient_4: linear-gradient(to right, rgba(#5C258D, 1), rgba(#4389A2, 1));
 // ==========================================================================
 
 // $heading_font: 'Poppins', sans-serif;
-$heading_font: "Abril Fatface", sans-serif;
-$body_font: 'Roboto', sans-serif;
+$heading_font: "Montserrat", sans-serif;
+$body_font: 'Avenir-Regular', sans-serif;
 
 $base-font-size: calc($si * 3);
 
