--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -3,28 +3,28 @@
 // Base – Typography
 // ==========================================================================
 .fatface {
-  font-family: 'Abril Fatface', cursive;
+  font-family: 'Playfair Display', serif;
   line-height: 50px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
-
 .grey-text {
   color:#7a7a7a;
 }
 
-.uagb-post__excerpt {
-  font-size:17px;
-}
 // Body
 body {
+  font-family: 'Playfair Display', serif !important;
+
   font-family: $body_font;
   @include font-size(calc($si * 2));
   @include line-height($si * 3);
   color: $text_gray;
   font-weight: 300;
-  // @media screen and (min-width: 320px) {    
-  //     font-size: calc(6px + 6 * ((100vw - 320px) / 680));   
-  //     line-height:calc(14px + 6 * ((100vw - 320px) / 680));   
-  // }
+  @media screen and (min-width: 320px) {    
+      font-size: calc(8px + 6 * ((100vw - 320px) / 680));   
+      line-height:calc(18px + 6 * ((100vw - 320px) / 680));   
+  }
   @media screen and (min-width: 1024px) {    
       font-size: calc($si * 3);
   }
@@ -638,7 +638,7 @@ hr, .hr {
   position:relative;
   display:inline-block;
   text-align:center;
-  font-family: "Roboto", Sans-serif;
+  font-family:'Avenir-Medium', sans-serif;
   text-transform:uppercase;
   letter-spacing:1px;
   font-size:14px;
