--- a/assets/sass/blocks/_footer.scss
+++ b/assets/sass/blocks/_footer.scss
@@ -1,23 +1,13 @@
 .footer {
-    padding-bottom:20px;
-    .copyright-footer {
-        text-align:center;
-        font-size:12px;
-        color:#666;
-    }
+
     .nav {
         padding: 20px 0px 20px 0px;
-        .menu-navigation-container {
-            width:50%;
-            margin:0 auto;
-            min-width:340px;
-            .menu {
-                
-                    padding-inline-start: 0px;
-                
+        .menu {
+            display:flex;
+            justify-content: space-between;
+            font-size:0.9rem;
+            ul {
                 display:flex;
-                justify-content: space-between;
-                font-size:0.9rem;
                 a {
                     color:#444;
                 }
