--- a/assets/sass/blocks/_header.scss
+++ b/assets/sass/blocks/_header.scss
@@ -12,8 +12,12 @@ header {
             min-width: 250px;
         }
     }
+    .nav {
+        width:100%;
+    }
     .menu-primary-nav-container {
         font-size: 1.1rem;
+        width:100%;
         ul {
             display:flex;
             justify-content: space-around;
@@ -22,10 +26,17 @@ header {
                 color:#444;
                 &:hover {
                     color:#B28E6A;
+                    text-decoration: none;
                 }
             }                  
         }
     }
+}
+
+.current_page_item,
+.current-menu-ancestor {
+    text-decoration: underline;
+    text-underline-position: under;
 }
 .uagb-post__excerpt {
     font-size:1rem !important;
@@ -35,13 +46,14 @@ header {
     margin:0 auto;
     padding:15px;
     height: 100%;
-    border: 1px solid #eee;
-    margin-top: 35px;
+    // border: 1px solid #eee;
+    margin-top: 10px;
   }
   
 .at-header {
     display:block;
     text-align:center;
+    padding-bottom:20px;
     h2 {
         font-size: 22px;
         font-family: 'Playfair Display', serif;
